docs: Note the event handling gotchas

We should note that calling GTK API that deals with events from a
ClutterActor event handler will cause re-entrancy issues.

In other words:

    If you call GTK event API
   from Clutter event handlers

  [ South Park ski instructor ]

      You're going to have
           a bad time

https://bugzilla.gnome.org/show_bug.cgi?id=745248